--- a/index.html
+++ b/index.html
@@ -1,25 +1,41 @@
-<!doctype html>
+<!DOCTYPE html>
 <html class="no-js" lang="">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Untitled</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+    <title>All about Ducks</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
+</head>
+<!-- Students will create two HTML files which link to each other.   The requirements for the pages are that:
 
-        <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-        <!-- Place favicon.ico in the root directory -->
+         [x] Each page will have a heading with different text on each page
+         [x] Each page will have differing background colors or images
+         [x] Each page will have an image
+         [x] One image will be via a url
+         [x] The other image will be a local file
+         [x] Each page will have a local link to the other page
+         [x] The teacher should be able to click back and forth between the two pages using the local link
+         [x] Each html document must have to proper beginning and ending tags
+         [x] Both pages must open and render in a web browser -->
+<body>
+    <h1>All About Ducks</h1><img src=
+    "https://media.istockphoto.com/id/464988959/photo/mallard-duck-on-white-background.jpg?s=612x612&amp;w=0&amp;k=20&amp;c=S1jcDuyXuoCVUaTobTrZ5f6SlscukkyheqKDHAeflW8="
+    alt="Mallard" width="250px">
+    <p>Duck is the common name for numerous species of waterfowl in
+    the family Anatidae. Ducks are generally smaller and
+    shorter-necked than swans and geese, which are members of the
+    same family. Divided among several subfamilies, they are a form
+    taxon; they do not represent a monophyletic group (the group of
+    all descendants of a single common ancestral species), since
+    swans and geese are not considered ducks. Ducks are mostly
+    aquatic birds, and may be found in both fresh water and sea
+    water.</p>
+<cite>Wikipedia contributors. Duck. Wikipedia, The
+    Free Encyclopedia. November 15, 2022, 04:10 UTC.
+    Available at: <a target="_blank" href=
+    "https://en.wikipedia.org/w/index.php?title=Duck&amp;oldid=1121972832.">
+                     https://en.wikipedia.org/w/index.php?title=Duck&amp;oldid=1121972832</a>
 
-    </head>
-    <body>
-        <!--[if lt IE 8]>
-            <p class="browserupgrade">
-            You are using an <strong>outdated</strong> browser. Please
-            <a href="http://browsehappy.com/">upgrade your browser</a> to improve
-            your experience.
-            </p>
-        <![endif]-->
-
-
-    </body>
+    Accessed December 4, 2022.</cite> <a target="_self" class="pagelink" href=
+    "Duckhalloffame.html">Duck Hall of Fame</a>
+</body>
 </html>
