Add live site URL in source code

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
          [x] Each page will have a local link to the other page
          [x] The teacher should be able to click back and forth between the two pages using the local link
          [x] Each html document must have to proper beginning and ending tags
-         [x] Both pages must open and render in a web browser -->
+         [x] Both pages must open and render in a web browser
+
+ Site is deployed to site is live at https://commander-duck.github.io/
+-->
 <body>
     <h1>All About Ducks</h1><img src=
     "https://media.istockphoto.com/id/464988959/photo/mallard-duck-on-white-background.jpg?s=612x612&amp;w=0&amp;k=20&amp;c=S1jcDuyXuoCVUaTobTrZ5f6SlscukkyheqKDHAeflW8="
